[gd_scene load_steps=2 format=3 uid="uid://f10yd66ej3ye"]

[ext_resource type="Script" uid="uid://buywcdulnpsea" path="res://src/ui/crafting_minigame.gd" id="1"]

[node name="CraftingMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MortarSprite" type="Sprite2D" parent="."]
position = Vector2(540, 600)

[node name="PatternDisplay" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 126.0
grow_horizontal = 2
text = "Pattern Display"
horizontal_alignment = 1

[node name="ResultDisplay" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
text = "Result"
horizontal_alignment = 1
